--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,16 +1,1 @@
-﻿
-
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Home</title>
-</head>
-<body>
-    <h1>Home</h1>
-    <ul>
-
-    </ul>
-</body>
-</html>
-
-
+﻿<h1>Home-Index Page</h1>
